Pandas Videos are completed

--- a/Week 8 - Pandas/PandasBasic.ipynb
+++ b/Week 8 - Pandas/PandasBasic.ipynb
@@ -928,7 +928,7 @@
    "source": [
     "# pandas, SQL work with structured data\n",
     "# it is a powerful library\n",
-    "# all SQL operational can be done in easiest possible way\n",
+    "# all SQL operations can be done in easiest possible way\n",
     "# we will read the csv file\n",
     "pd.read_csv(\"services.csv\")"
    ]
@@ -1887,7 +1887,7 @@
    ],
    "source": [
     "# by default it gives row indices\n",
-    "# but only if header is not present in file, the it gives column indices\n",
+    "# but only if header is not present in file, then it gives column indices\n",
     "pd.read_csv(\"services.csv\", header = None)"
    ]
   },
@@ -3282,6 +3282,7 @@
     }
    ],
    "source": [
+    "# with this syntax only one column can be accessed which results in a series\n",
     "df['keywords', 'status']"
    ]
   },
@@ -5815,6 +5816,7 @@
    ],
    "source": [
     "# order does not matter\n",
+    "# data frame\n",
     "df2[['Survived', 'Name', 'Pclass', 'Sex']]"
    ]
   },
@@ -5824,7 +5826,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# saving data in a file accessing in local system\n",
+    "# saving data from link in a file in local system\n",
     "df2.to_csv(\"Titanic.csv\")"
    ]
   },
@@ -5882,12 +5884,13 @@
     }
    ],
    "source": [
+    "#reading data from url\n",
     "import pandas as pd\n",
     "import lxml\n",
     "pd.read_html(\"https://www.basketball-reference.com/leagues/NBA_2015_totals.html\")\n",
     "# in the website we more information than tabular data\n",
     "# but pandas is going to read only tabular data\n",
-    "# if there are 10 tables in website then it will return a list"
+    "# if there are 10 tables in website then it will return a list where wach index points to a data frame"
    ]
   },
   {
