To see interactive graphs and 3D models open in google collab

--- a/Week 9 - Numpy & Visualization/Plotly.ipynb
+++ b/Week 9 - Numpy & Visualization/Plotly.ipynb
@@ -34,6 +34,7 @@
       },
       "outputs": [],
       "source": [
+        "# to see interactive graphs and 3D models please click on open in google collab"
         "# plotly adds more interactiveness than pandas, matplotlib, seaborn\n",
         "import plotly.graph_objects as go"
       ]
