Plotly is my favourite Visualization tool

--- a/Week 5 - Files & Exceptional Handling & Memory Management/Multithreading.ipynb
+++ b/Week 5 - Files & Exceptional Handling & Memory Management/Multithreading.ipynb
@@ -459,6 +459,11 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "when this thread2 is running test2() runs first for 100 and goes for sleeep\n",
+    "   in the remaining time other threads are running\n",
+    "and this repeats\n",
+    "\"\"\"\n",
     "for i in thread2 :\n",
     "    i.start()"
    ]
@@ -469,6 +474,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "We have made shared_var global because we want everyone in a core to modify its value\n",
+    "\"\"\"\n",
     "import threading\n",
     "import time\n",
     "shared_var = 0\n",
@@ -529,10 +537,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello world\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# thread is an instance of same function"
+   ]
   }
  ],
  "metadata": {
