Understanding statistics is understanding data

--- a/Week 11 - Statistics Advance 1/QQ_Plot_With_Python.ipynb
+++ b/Week 11 - Statistics Advance 1/QQ_Plot_With_Python.ipynb
@@ -408,6 +408,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HW\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"HW\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
