--- a/Week 12 - Statistics Advance 2/Chi_Square_with_Python.ipynb
+++ b/Week 12 - Statistics Advance 2/Chi_Square_with_Python.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -14,7 +14,7 @@
     }
    ],
    "source": [
-    "print(\"HW\")"
+    "print(\"HW\")\n"
    ]
   },
   {
