numpy assignment done

--- a/Week 4 - OOPS/Decorators.ipynb
+++ b/Week 4 - OOPS/Decorators.ipynb
@@ -161,10 +161,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Good morning\n",
+      "Hello world\n",
+      "Thanks for using my application\n",
+      "Good morning\n",
+      "130\n",
+      "Thanks for using my application\n"
+     ]
+    }
+   ],
+   "source": [
+    "def greet(fun) :\n",
+    "    def mfun(*args) :\n",
+    "        print(\"Good morning\")\n",
+    "        fun(*args)\n",
+    "        print(\"Thanks for using my application\")\n",
+    "    return mfun\n",
+    "\n",
+    "@greet\n",
+    "def hello() :\n",
+    "    print(\"Hello world\")\n",
+    "\n",
+    "@greet\n",
+    "def add(a, b) :\n",
+    "    print(a + b)\n",
+    "\n",
+    "hello()\n",
+    "add(10, 120)"
+   ]
   }
  ],
  "metadata": {
