--- a/Assignments/Numpy assignment.ipynb
+++ b/Assignments/Numpy assignment.ipynb
@@ -226,6 +226,26 @@
     "id_mat = np.diag([1, 1, 1, 1, 1])\n",
     "print(id_mat)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "id_mat[0][0]"
+   ]
   }
  ],
  "metadata": {
